--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+    <section>
+        <div class="header">
+        <!-- <h1>Hori<span class="seo">seo</span>n</h1> -->
+            <h1>Hori<span style="color:#f0ec0b">seo</span>n</h1>
+            <div>
+                <ul>
+                    <li>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    </li>
+                    <li>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
+                    </li>
+                    <li>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
+    </section> 
+    <!-- add large background image -->
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
