final results page

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Dave's Kickbutt Company</title>
+    <title>HoriSEOn - THE company for SEO</title>
 </head>
 
 <body>
     <section>
+        <!-- Page name and navbar names and links -->
         <div class="header">
-            <!-- add link and color change for 'seo' part of name -->
-        <!-- <h1>Hori<span class="seo">seo</span>n</h1> -->
+            <!-- company name with SEO emphasis -->
             <h1>Hori<span style="color:#f0ec0b">seo</span>n</h1>
+            <!-- navbar list of names with links to appropriate sctions -->
             <div>
                 <ul>
-                    <!-- list view selections in link bar -->
+                    <!-- Nav bar selections -->
                     <li>
                         <a href="#search-engine-optimization">Search Engine Optimization</a>
                     </li>
@@ -29,16 +30,16 @@
             </div>
         </div>
     </section> 
-    <!-- add large background image -->
+    <!-- background image -->
     <div class="hero"></div>
-    <!-- set up display to text inline and placement/side -->
+    <!-- display feature descriptions and images -->
     <div class="content">
-        <!--  -->
-        <div  class="search-engine-optimization">
-
-            <!-- moved id="online-reputation-management" into img src line to allow common image size class definition in css.style -->
-            <!-- justify image to left in SEO block -->
-            <img src="./assets/images/search-engine-optimization.jpg" id="search-engine-optimization" class="float-left" />
+        <!-- Info box text and image -->
+        <div class="common-info-box">
+            <!-- define image and text locations in SEO block -->
+            <img src="./assets/images/search-engine-optimization.jpg" 
+            alt="Image showing possible improvements from SEO" id="search-engine-optimization" 
+            class="float-left" />
             
             <h2>Search Engine Optimization</h2>
             <p>
@@ -46,11 +47,11 @@
             </p>
         </div>
 
-        <div class="online-reputation-management">
-
-            <!-- moved id="online-reputation-management" into img src line to allow common image size class definition in css.style -->
-            <!-- justify image to right in ORM block -->
-            <img src="./assets/images/online-reputation-management.jpg" id="online-reputation-management" class="float-right" />
+        <div class="common-info-box">
+            <!-- define image and text locations in Rep Mgmt block -->
+            <img src="./assets/images/online-reputation-management.jpg"
+            alt="Image with laptop emphasizing Reputation" id="online-reputation-management" 
+            class="float-right" />
 
             <h2>Online Reputation Management</h2>
             <p>
@@ -58,10 +59,11 @@
             </p>
         </div>
 
-        <div class="social-media-marketing">
-            <!-- moved id="online-reputation-management" into img src line to allow common image size class definition in css.style -->
-            <!-- justify image to left in SMM block -->
-            <img src="./assets/images/social-media-marketing.jpg" id="social-media-marketing" class="float-left" />
+        <div class="common-info-box">
+            <!-- define image and text locations in Social media block -->
+            <img src="./assets/images/social-media-marketing.jpg" 
+            alt="Image with various social media sources"
+            id="social-media-marketing" class="float-left" />
             
             <h2>Social Media Marketing</h2>
             <p>
@@ -71,21 +73,22 @@
     </div>
 
     <div class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-title">
+            <!-- Sidebar images and notes describing the benefits of using our company -->
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-title">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-title">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
